--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "irvine-hacks",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "babel-preset-expo": "^55.0.10",
     "expo": "~55.0.4",
+    "expo-constants": "~55.0.7",
+    "expo-image-picker": "~55.0.10",
+    "expo-linear-gradient": "~55.0.8",
+    "expo-linking": "~55.0.7",
+    "expo-router": "~55.0.3",
     "expo-status-bar": "~55.0.4",
+    "lucide-react-native": "^0.575.0",
+    "nativewind": "^4.2.2",
     "react": "19.2.0",
-    "react-native": "0.83.2"
+    "react-dom": "19.2.0",
+    "react-native": "0.83.2",
+    "react-native-gesture-handler": "~2.30.0",
+    "react-native-reanimated": "4.2.1",
+    "react-native-safe-area-context": "~5.6.2",
+    "react-native-screens": "~4.23.0",
+    "react-native-svg": "^15.15.3",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.7.4",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/react": "~19.2.2",
